--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@
 
 body {
     background-image: url(../images/background.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 ul {
