--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,9 @@ h1 {
        1px 1px 0 #000;
     margin-left: 50px;
     font-family: 'Russo One', sans-serif;
-    margin-left: 50rem;
+    position: absolute;
+    right: 0;
+    bottom: 0;
 }
 
 #Voorjaarsaanbieding {
