--- a/css/style.css
+++ b/css/style.css
@@ -152,3 +152,34 @@ img[id="Doldwaze dagen"] {
   text-align: center;
   top: 18vh;
 }
+
+input[type=text] {
+  width: auto;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+
+.contact > label {
+  font-size: x-large;
+  font-family: 'Russo One', sans-serif;
+  font-weight: bold;
+  margin: 0;
+  padding: 0;
+  top: auto;
+  right: 10rem;
+}
+
+.contact h1{
+  font-size: x-large;
+  font-family: 'Russo One', sans-serif;
+  font-weight: bold;
+  margin: 0;
+  padding: 0;
+  top: auto;
+  right: 10rem;
+}
