--- a/css/style.css
+++ b/css/style.css
@@ -149,9 +149,10 @@ h1 {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between | center;
   align-items: center;
   margin-top: 250px;
+  margin-left: 450px;
+
 }
 
 #Voorjaarsaanbieding {
@@ -172,6 +173,43 @@ img[id="Doldwaze dagen"] {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.meer-info1 a ,.meer-info2 a, .meer-info3 a, .meer-info4 a {
+  border: 4px solid red;
+  background-color: black;
+  color: white;
+  padding: 15px 30px;
+  text-align: center;
+  font-family: 'Russo One', sans-serif;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.meer-info1 a {
+  border: 4px solid red;
+}
+
+.meer-info2 a {
+  border: 4px solid green;
+}
+
+.meer-info3 a {
+  border: 4px solid red;
+}
+
+.meer-info4 a {
+  border: 4px solid yellow;
+}
+.container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  align-content: space-around;
+  margin-top: 50px;
+  margin-left: 600px;
 }
 
 .contact {
