--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
     background-image: url(../images/background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+
 }
 
 
@@ -257,7 +258,7 @@ input[type=text] {
   display: inline-block;
   font-size: 16px;
   position: relative;
-  top: -10rem;
+  top: -15rem;
 }
 
 .meer-info1 a {
@@ -274,6 +275,21 @@ input[type=text] {
 
 .meer-info4 a {
   border: 4px solid yellow;
+}
+
+.container > button {
+  background-color: transparent;
+  border: none;
+}
+
+#images-product {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  overflow: hidden;
+  margin-top: 50px;
+  position: relative;
+  top: -15rem;  
 }
 
 .container {
@@ -299,10 +315,10 @@ input[type=text] {
   flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
-  margin-top: 180px;
   margin-left: 5%;
   font-size: xx-large;
 }
+
 
 .aardbei-info p {
   color: white;
@@ -320,7 +336,6 @@ input[type=text] {
   flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
-  margin-top: 180px;
   margin-left: 5%;
   font-size: xx-large;
   -webkit-text-stroke: 2px green;
@@ -339,7 +354,6 @@ input[type=text] {
   flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
-  margin-top: 180px;
   margin-left: 5%;
   font-size: xx-large;
   -webkit-text-stroke: 1px yellow;
@@ -350,6 +364,23 @@ input[type=text] {
       1px -1px 0 #000,
       -1px 1px 0 #000,
        1px 1px 0 #000;
+}
+
+footer {
+  text-align: center;
+  background-color: red;
+  color: white;
+  font-family: 'Russo One', sans-serif;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.footerp {
+  color: white;
+  font-family: 'Russo One', sans-serif;
+  text-align:  left;
 }
 
 
