--- a/css/style.css
+++ b/css/style.css
@@ -405,10 +405,11 @@ footer {
   background-color: red;
   color: white;
   font-family: 'Russo One', sans-serif;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
+
 }
 
 .footerp {
