--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,14 @@ h1 {
   color: #ccc;
 }
 
+.evenement_detail {
+  display: flex;
+  flex-direction: column;
+  align-content: space-between;
+  color: #ccc;
+
+}
+
 .link {
   color: blue;
   border: #000 3px solid;
@@ -171,12 +179,9 @@ h1 {
   width: 90px;
 }
 
-
-
 main{
   width: 50%;
   margin: 0 auto;
-
 }
 
 .aankomende-evenementen {
@@ -195,9 +200,6 @@ main{
 
 }
 
-
-
-
 .banner-images{
   display: flex;
   justify-content: space-evenly;
@@ -207,7 +209,6 @@ main{
 }
 
 .banner-images img{
-width: 10%;
 display: block;
 }
 
@@ -416,4 +417,8 @@ footer {
   color: white;
   font-family: 'Russo One', sans-serif;
   text-align:  left;
+}
+
+.evenementen_detail .dag {
+  font-size: x-large;
 }
